# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("../../os_account.gni")
account_service_sources = [
  "${services_path}/accountmgr/src/account_event_provider.cpp",
  "${services_path}/accountmgr/src/account_event_subscribe.cpp",
  "${services_path}/accountmgr/src/account_file_watcher_manager.cpp",
  "${services_path}/accountmgr/src/account_helper_data.cpp",
  "${services_path}/accountmgr/src/account_info_report.cpp",
  "${services_path}/accountmgr/src/account_mgr_service.cpp",
  "${services_path}/accountmgr/src/account_state_machine.cpp",
  "${services_path}/accountmgr/src/account_stub.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_manager_service.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_plugin_death_recipient.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_plugin_proxy.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_stub.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_has_domain_info_callback.cpp",
  "${services_path}/accountmgr/src/domain_account/inner_domain_account_manager.cpp",
  "${services_path}/accountmgr/src/domain_account/status_listener_death_recipient.cpp",
  "${services_path}/accountmgr/src/domain_account/status_listener_manager.cpp",
  "${services_path}/accountmgr/src/ohos_account_data_deal.cpp",
  "${services_path}/accountmgr/src/ohos_account_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/inner_os_account_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_control_file_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_delete_user_idm_callback.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_domain_account_callback.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_file_operator.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_interface.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_manager_service.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_photo_operator.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_stop_user_callback.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_stub.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_subscribe_death_recipient.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_subscribe_manager.cpp",
]
